--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       h2 {
         font-weight: 700;
         padding: 0px 3rem 0px 3rem;
+        color: hsl(218, 44%, 22%);
       }
 
       p {
