--- a/index.html
+++ b/index.html
@@ -54,16 +54,18 @@
 </style>
 
 <body>
-  <div class="container">
-    <div class="card">
-      <picture>
-        <img src="images/image-qr-code.png" alt="QR-code image">
-      </picture>
+  <main>
+    <div class="container">
+      <div class="card">
+        <picture>
+          <img src="images/image-qr-code.png" alt="QR-code image">
+        </picture>
 
-      <h2>Improve your front-end skills by building projects</h2>
-      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        <h2>Improve your front-end skills by building projects</h2>
+        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      </div>
     </div>
-  </div>
+  </main>
 </body>
 
 </html>
